# nightfall

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  游戏设计文档.md
assets/data/: buildings.json  characters.json  enemies.json  recipes.json  tech_tree.json
build_log/: buildlog.txt
src/: main.cpp
src/core/: Application.cpp  Application.h  Logger.cpp  Logger.h  ResourceManager.cpp  ResourceManager.h  Time.cpp  Time.h
src/ecs/: Components.h  Registry.cpp  Registry.h
src/systems/: AISystem.cpp  AISystem.h  BuildingSystem.cpp  BuildingSystem.h  CombatSystem.cpp  CombatSystem.h  MovementSystem.cpp  MovementSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderingSystem.cpp  RenderingSystem.h  ResourceSystem.cpp  ResourceSystem.h  TurretSystem.cpp  TurretSystem.h  VisualEffectsSystem.cpp  VisualEffectsSystem.h  WaveSystem.cpp  WaveSystem.h
src/ui/: HUD.cpp  HUD.h  UIElements.cpp  UIElements.h
src/utils/: Config.cpp  Config.h
tools/: generate_placeholders.cpp  generate_resource_textures.py
